# izuna-ytdl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Dockerfile.new  README.md  alembic.ini  build.ps1  build_base.ps1  docker-compose.new.yaml  docker-compose.yaml  lambda_requirements.txt  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_09_01_2116-4e0446e3ceac_create_user_table.py  2023_09_02_1222-fe7a584b0f30_use_password_hash_scheme.py  2023_09_02_1404-a4401af3b2c1_add_item_table.py  2023_09_02_1713-5d033b6e5432_add_item_and_downloadtask_table.py  2023_09_02_1811-09af3ee9684f_add_item_and_downloadtask_table.py  2023_09_03_1642-ce76dc5dff3e_add_item_name_column.py  4e0446e3ceac_create_user_table.py
izuna_ytdl/: auth.py  config.py  database.py  main.py
izuna_ytdl/lambda/: handler.py
izuna_ytdl/models/: __init__.py  download_task.py  item.py  user.py
izuna_ytdl/router/: downloader.py  user.py
izuna_ytdl/routes/: downloader.py  user.py
izuna_ytdl/script/: create_db.py
izuna_ytdl/utils/: models.py  redis.py  regexes.py  responses.py
izuna_ytdl_flask/: cli_to_api.py  main.py
izuna_ytdl_flask/models/: download_task.py  item.py  user.py
izuna_ytdl_flask/routes/: downloader.py  user.py
izuna_ytdl_flask/utils/: models.py
script/: build_lambda.sh  create_db.py  import_item.py  import_task.py  import_user.py
tests/: test_main.py
tests/router/: conftest.py  test_downloader.py  test_user.py
