[tool.poetry]
name = "izuna-ytdl"
version = "0.1.0"
description = ""
authors = ["Arung Agamani <arung.agamani@gmail.com>"]
readme = "README.md"
packages = [{include = "izuna_ytdl"}]

[tool.poetry.dependencies]
python = "^3.9"
yt-dlp = "^2023.7.6"
flask = {extras = ["async"], version = "^2.3.2"}
cerberus = "^1.3.4"
redis = "^4.6.0"
pydantic = "^2.0.2"
flask-login = "^0.6.2"
redis-om = "^0.1.3"
flask-jwt-extended = "^4.5.2"
boto3 = "^1.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
