[tool.poetry]
name = "izuna-ytdl"
version = "0.1.0"
description = ""
authors = ["Arung Agamani <arung.agamani@gmail.com>"]
readme = "README.md"
packages = [{ include = "izuna_ytdl" }]

[tool.poetry.dependencies]
python = "^3.9"
yt-dlp = "^2023.7.6"
flask = { extras = ["async"], version = "^2.3.2" }
cerberus = "^1.3.4"
redis = "^4.6.0"
flask-login = "^0.6.2"
redis-om = "^0.1.3"
flask-jwt-extended = "^4.5.2"
boto3 = "^1.28.3"
fastapi = "^0.103.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlmodel = "^0.0.8"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "poetry run flask --app ./izuna_ytdl/main.py run --host=0.0.0.0"
shell = "poetry run flask --app ./izuna_ytdl/main.py shell"
format = "poetry run black izuna_ytdl/"
