[tool.poetry]
name = "izuna-ytdl"
version = "0.1.0"
description = ""
authors = ["Arung Agamani <arung.agamani@gmail.com>"]
readme = "README.md"
packages = [{ include = "izuna_ytdl" }]

[tool.poetry.dependencies]
python = "^3.9"
yt-dlp = "^2023.7.6"
flask = { extras = ["async"], version = "^2.3.2" }
cerberus = "^1.3.4"
redis = "^4.6.0"
flask-login = "^0.6.2"
redis-om = "^0.1.3"
flask-jwt-extended = "^4.5.2"
boto3 = "^1.28.3"
fastapi = "^0.103.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlmodel = "^0.0.8"
alembic = "^1.12.0"
joserfc = "^0.7.0"
argon2-cffi = "^23.1.0"
pydantic = "<2.0.0"
psycopg2-binary = "^2.9.7"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.287"
pre-commit = "^3.3.3"
deptry = "^0.12.0"
httpx = "^0.24.1"
pytest-order = "^1.1.0"
pytest = "^7.4.2"
pytest-env = "^1.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "poetry run uvicorn izuna_ytdl.main:app"
format = "poetry run black izuna_ytdl/"
dev = "poetry run uvicorn izuna_ytdl.main:app --reload"

[tool.ruff.per-file-ignores]
"izuna_ytdl/models/__init__.py" = ["F401"]

[tool.pytest.ini_options]
env = [
    "MASTER_SIGNUP_CODE=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
    "DB_CONNECTION_URL=sqlite:///test.db",
    "YTDL_BUCKET_NAME=izuna-ytdl-files",
]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"

[tool.coverage.run]
source = ["izuna_ytdl"]
